creado endpoint para leaderboard y actualizacion de swagger
